# news-analysis-app

./: Makefile  README.md  pyproject.toml
news-analysis/: pyproject.toml  requirements.txt
news-analysis/news_analysis/: app.py
news_analysis/: app.py
news_analysis/utils/: dataset_utils.py  nlp_utils.py
