[tool.poetry]
name = "news-analysis"
version = "0.1.0"
description = ""
authors = ["jnmarti <88381891+jnmarti@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "news_analysis"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
streamlit = "^1.17.0"
datasets = "^2.8.0"
nlplot = "^1.6.0"
dateparser = "^1.1.6"
seaborn = "^0.12.2"
spacy = "^3.5.0"

[tool.poetry.dependencies.es_core_news_sm]
url = "https://github.com/explosion/spacy-models/releases/download/es_core_news_sm-3.5.0/es_core_news_sm-3.5.0.tar.gz"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
