[tool.poetry]
name = "news-analysis"
version = "0.1.0"
description = ""
authors = ["jnmarti <88381891+jnmarti@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "news_analysis"}]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.17.0"
datasets = "^2.8.0"
nlplot = "^1.6.0"
dateparser = "^1.1.6"
seaborn = "^0.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
